--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
       <META name="description" content="The second iteration of crtically-acclaimed CHIRECJMUN takes place on Nov 2 - 4, 2018.">
       <META name="keywords" content="mun, jmun, chirec, 2018, hyderabad, india, junior, JR, best, apply, delegate, executive, board, committees, committee, delegates, secretariat, about, faq, sponsors, secretary, general, chirec@gmail.com,">
       <META name="keywords" content="disec, jcc, sochum, unsc, unoosa, ilo, african, union, finance, tech, design, affairs, director, general, Disarmament, International, Security, Committee, Social, Cultural, Humanitarian, United, Nations, Security, Council, sc, UN, Office, for, Outer, Space, Affairs, International, Labor, Organisation, AU, joint, crisis, cabinet">
-      <link rel="stylesheet" href="/css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
-      <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     </head>
 
@@ -1064,6 +1064,13 @@
             css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
             document.body.appendChild(css);
         };
+    </script>
+    <script>
+      $(function() {
+        if ($('#bootstrapCssTest').is(":visible")) {
+          $("head").prepend('<link rel="stylesheet" href="/css/bootstrap.min.css">');
+        }
+      });
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
