--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8"/>
       <title>CHIRECJMUN</title>
       <META name="description" content="The second iteration of crtically-acclaimed CHIRECJMUN takes place on Nov 2 - 4, 2018.">
-      <META name="keywords" content="mun, jmun, chirec, 2018, hyderabad, india, junior, JR, best, apply, delegate, executive, board, committees, committee, delegates, secretariat, about, faq, sponsors, secretary, general, chirec@gmail.com,">
+      <META name="keywords" content="mun, jmun, chirec, 2018, hyderabad, india, junior, JR, best, apply, delegate, executive, board, committees, committee, delegates, secretariat, about, faq, sponsors, secretary, general, chirec@gmail.com, model">
       <META name="keywords" content="disec, jcc, sochum, unsc, unoosa, ilo, african, union, finance, tech, design, affairs, director, general, Disarmament, International, Security, Committee, Social, Cultural, Humanitarian, United, Nations, Security, Council, sc, UN, Office, for, Outer, Space, Affairs, International, Labor, Organisation, AU, joint, crisis, cabinet">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <link rel="stylesheet" href="css/style.css">
