--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="col-lg-4 wow bounceIn">
             <div class="card" style="background-color: #FFF; color: #54a0ff; padding: 35px 20px;">
               <img src="img/UN.png"class="img-fluid card-img-top rounded-circle mx-auto d-block" alt="Logo"><br>
-              <h4 class="card-header text-center">Committee</h4><br>
+              <h4 class="card-header2 text-center">Committee</h4><br>
               <p class="card-content text-left">Agenda: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <button  href="#" class="btn button2 clickable" data-toggle="modal" data-target="#Modal1">Learn More</button></a>
               <div class="modal fade" id="Modal1" tabindex="-1" role="dialog" aria-labelledby="Title" aria-hidden="true">
@@ -195,7 +195,7 @@
           <div class="col-lg-4 wow bounceIn">
             <div class="card" style="background-color: #FFF; color: #54a0ff; padding: 35px 20px;">
               <img src="img/UN.png"class="img-fluid card-img-top rounded-circle mx-auto d-block" alt="Logo"><br>
-              <h4 class="card-header text-center">Committee</h4><br>
+              <h4 class="card-header2 text-center">Committee</h4><br>
               <p class="card-content text-left">Agenda: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <button  href="#" class="btn button2 clickable" data-toggle="modal" data-target="#Modal2">Learn More</button></a>
               <div class="modal fade" id="Modal2" tabindex="-1" role="dialog" aria-labelledby="Title" aria-hidden="true">
@@ -260,7 +260,7 @@
           <div class="col-lg-4 wow bounceIn">
             <div class="card" style="background-color: #FFF; color: #54a0ff; padding: 35px 20px;">
               <img src="img/UN.png"class="img-fluid card-img-top rounded-circle mx-auto d-block" alt="Logo"><br>
-              <h4 class="card-header text-center">Committee</h4><br>
+              <h4 class="card-header2 text-center">Committee</h4><br>
               <p class="card-content text-left">Agenda: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <button  href="#" class="btn button2 clickable" data-toggle="modal" data-target="#Modal3">Learn More</button></a>
               <div class="modal fade" id="Modal3" tabindex="-1" role="dialog" aria-labelledby="Title" aria-hidden="true">
@@ -327,7 +327,7 @@
           <div class="col-lg-3 wow bounceIn">
             <div class="card" style="background-color: #FFF; color: #54a0ff; padding: 35px 20px;">
               <img src="img/UN.png"class="img-fluid card-img-top rounded-circle mx-auto d-block" alt="Logo"><br>
-              <h4 class="card-header text-center">Committee</h4><br>
+              <h4 class="card-header2 text-center">Committee</h4><br>
               <p class="card-content text-left">Agenda: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <button  href="#" class="btn button2 clickable" data-toggle="modal" data-target="#Modal4">Learn More</button></a>
               <div class="modal fade" id="Modal4" tabindex="-1" role="dialog" aria-labelledby="Title" aria-hidden="true">
@@ -392,7 +392,7 @@
             <div class="col-lg-3 wow bounceIn">
               <div class="card" style="background-color: #FFF; color: #54a0ff; padding: 35px 20px;">
                 <img src="img/UN.png"class="img-fluid card-img-top rounded-circle mx-auto d-block" alt="Logo"><br>
-                <h4 class="card-header text-center">Committee</h4><br>
+                <h4 class="card-header2 text-center">Committee</h4><br>
                 <p class="card-content text-left">Agenda: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <button  href="#" class="btn button2 clickable" data-toggle="modal" data-target="#Modal5">Learn More</button></a>
                 <div class="modal fade" id="Modal5" tabindex="-1" role="dialog" aria-labelledby="Title" aria-hidden="true">
@@ -457,7 +457,7 @@
           <div class="col-lg-3 wow bounceIn">
             <div class="card" style="background-color: #FFF; color: #54a0ff; padding: 35px 20px;">
               <img src="img/UN.png"class="img-fluid card-img-top rounded-circle mx-auto d-block" alt="Logo"><br>
-              <h4 class="card-header text-center">Committee</h4><br>
+              <h4 class="card-header2 text-center">Committee</h4><br>
               <p class="card-content text-left">Agenda: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <button  href="#" class="btn button2 clickable" data-toggle="modal" data-target="#Modal6">Learn More</button></a>
               <div class="modal fade" id="Modal6" tabindex="-1" role="dialog" aria-labelledby="Title" aria-hidden="true">
@@ -522,7 +522,7 @@
           <div class="col-lg-3 wow bounceIn">
             <div class="card" style="background-color: #FFF; color: #54a0ff; padding: 35px 20px;">
               <img src="img/UN.png"class="img-fluid card-img-top rounded-circle mx-auto d-block" alt="Logo"><br>
-              <h4 class="card-header text-center">Committee</h4><br>
+              <h4 class="card-header2 text-center">Committee</h4><br>
               <p class="card-content text-left">Agenda: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <button  href="#" class="btn button2 clickable" data-toggle="modal" data-target="#Modal7">Learn More</button></a>
               <div class="modal fade" id="Modal7" tabindex="-1" role="dialog" aria-labelledby="Title" aria-hidden="true">
