--- a/index.html
+++ b/index.html
@@ -4,16 +4,31 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta charset="utf-8"/>
       <title>CHIRECJMUN</title>
-      <META name="description" content="The second iteration of crtically-acclaimed CHIRECJMUN takes place on Nov 2 - 4, 2018.">
-      <META name="keywords" content="mun, jmun, chirec, 2018, hyderabad, india, junior, JR, best, apply, delegate, executive, board, committees, committee, delegates, secretariat, about, faq, sponsors, secretary, general, chirec@gmail.com, model">
+      <META name="description" content="The second iteration of crtically-acclaimed CHIRECJMUN takes place on Nov 2 - 4, 2018 at CHIREC Kondapur, Hyderabad. Apply now to be part of this monumental conference.">
+      <META name="keywords" content="mun, jmun, chirec, 2018, hyderabad, india, junior, JR, best, apply, delegate, executive, board, committees, committee, delegates, secretariat, about, faq, sponsors, secretary, general, chirec@gmail.com, model, conference, best, amazing, well, known, enriching, enlightening, gsl, position, paper, debate, determine, resolve">
       <META name="keywords" content="disec, jcc, sochum, unsc, unoosa, ilo, african, union, finance, tech, design, affairs, director, general, Disarmament, International, Security, Committee, Social, Cultural, Humanitarian, United, Nations, Security, Council, sc, UN, Office, for, Outer, Space, Affairs, International, Labor, Organisation, AU, joint, crisis, cabinet">
       <link rel="stylesheet" href="css/bootstrap.min.css">
-      <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     </head>
+
+    <style>
+    @font-face {font-family: 'Raleway', sans-serif;src: url(fonts/Raleway-Regular.ttf);}
+    html{overflow-x: hidden;font-family: 'Raleway', sans-serif;}
+    br{-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;-o-user-select: none;user-select: none;}
+    @media (min-width: 768px) {.modal-xl {width: 90%;max-width:1200px;}}
+    .button2{background-color: white;color: #54a0ff;border: 2px solid #54a0ff;}
+    .button2:hover {background-color: #54a0ff;color: white;}
+    .card {box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);}
+    .logo {color: #54a0ff;}
+    .mlogo {color: #FFF;}
+    hr.style1{border-top: 1px solid #FFF;}
+    hr.style2{border-top: 1px solid #54a0ff;}
+    .bgtype1{background-color: #FFF;color: #54a0ff;padding: 35px 20px;}
+    .bgtype2{background-color: #54a0ff;color: #FFF;padding: 35px 20px;}
+    </style>
 
     <body data-offset="50" style="font-family: 'Raleway', sans-serif;"  data-spy="scroll" data-offset="50" data-target=".navbar">
 
