--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       <META name="description" content="The second iteration of crtically-acclaimed CHIRECJMUN takes place on Nov 2 - 4, 2018 at CHIREC Kondapur, Hyderabad. Apply now to be part of this monumental conference.">
       <META name="keywords" content="mun, jmun, chirec, 2018, hyderabad, india, junior, JR, best, apply, delegate, executive, board, committees, committee, delegates, secretariat, about, faq, sponsors, secretary, general, chirec@gmail.com, model, conference, best, amazing, well, known, enriching, enlightening, gsl, position, paper, debate, determine, resolve">
       <META name="keywords" content="disec, jcc, sochum, unsc, unoosa, ilo, african, union, finance, tech, design, affairs, director, general, Disarmament, International, Security, Committee, Social, Cultural, Humanitarian, United, Nations, Security, Council, sc, UN, Office, for, Outer, Space, Affairs, International, Labor, Organisation, AU, joint, crisis, cabinet">
-      <link rel="stylesheet" href="css/bootstrap.min.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/fontawesome.css" integrity="sha384-ozJwkrqb90Oa3ZNb+yKFW2lToAWYdTiF1vt8JiH5ptTGHTGcN7qdoR1F95e0kYyG" crossorigin="anonymous">
     </head>
@@ -54,7 +55,7 @@
       </nav>
 
       <div class="text-center" style="color: #FFF;" id="start">
-        <div style="background: url(img/Pano.jpg) 50% 0 no-repeat fixed;"><br><br><br><br><br>
+        <div style="background: url(img/Pano.jpg) 50% 0 no-repeat fixed;"><br><br><br><br><br><br>
           <h4 class="d-none d-md-block wow fadeInDown display-1">CHIRECJMUN 2018</h4>
           <h4 class="d-none d-sm-block d-md-none wow fadeInDown display-3">CHIRECJMUN 2018</h4>
           <h1 class="d-block d-sm-none wow fadeInDown">CHIRECJMUN 2018</h4>
@@ -1025,7 +1026,6 @@
       </div>
 
     <script src="js/wow.min.js"></script>
-
     <script>
     new WOW().init();
     </script>
@@ -1077,6 +1077,13 @@
             css.innerHTML = ".typewrite > .wrap { border-right: 0.08em solid #fff}";
             document.body.appendChild(css);
         };
+    </script>
+    <script>
+      $(function() {
+        if ($('#bootstrapCssTest').is(":visible")) {
+          $("head").prepend('<link rel="stylesheet" href="css/bootstrap.min.css">');
+        }
+      });
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
