--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     @media (min-width: 768px) {.modal-xl {width: 90%;max-width:1200px;}}
     .button2{background-color: white;color: #54a0ff;border: 2px solid #54a0ff;}
     .button2:hover {background-color: #54a0ff;color: white;}
-    .card {box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);}
     .logo {color: #54a0ff;}
     .mlogo {color: #FFF;}
     hr.style1{border-top: 1px solid #FFF;}
@@ -112,18 +111,17 @@
         </div>
         <br><br><br>
         <div class="row">
-          <div class="col-lg-3">
-            <img src="img/dv.png" class="img-fluid rounded mx-auto d-block" alt="Sarthak Bansal"><br>
-          </div>
-          <div class="col-lg-1"></div>
-          <div class="col-lg-8">
+          <div class="col-lg-9">
             <h1 class="wow fadeInDown">Greetings,</h1>
             <br>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="lead wow jackInTheBox">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p class="lead wow jackInTheBox">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             <br>
-            <h4>Sarthak Bansal,<br>Secretary General</h4>
+            <h4 class="wow fadeInUp">Sarthak Bansal,<br>Secretary General</h4>
             <br>
+          </div>
+          <div class="col-lg-3 wow slideInRight">
+            <img src="img/dv.png" class="img-fluid rounded mx-auto d-block" alt="Sarthak Bansal"><br>
           </div>
         </div>
       </div>
@@ -828,17 +826,18 @@
       </div>
 
       <div class="text-center" style="color: #FFF;">
-        <div style="background: url(img/CHIREC.png) 50% 0 no-repeat fixed;"><br><br><br>
+        <div style="background: url(img/CHIREC.jpg) 50% 0 no-repeat fixed;"><br><br><br>
           <div class="container-fluid">
+            <br>
             <h4 class="d-none d-md-block wow fadeInDown display-1">A Land of Acheivement</h4>
             <h4 class="d-none d-sm-block d-md-none wow fadeInDown display-3">A Land of Acheivement</h4>
             <h1 class="d-block d-sm-none wow fadeInDown">A Land of Acheivement</h4>
             <hr class="style1" style="width: 75%;">
         </div>
-          <br><br>
+          <br><br><br>
           <a href="https://alumni.chirec.ac.in/page/about-chirec" target="_blank"><button class="btn btn-lg btn-outline-light wow rollIn">Learn More</button></a>
           <div id="sponsors"></div>
-          <br><br>
+          <br><br><br>
         </div>
       </div>
 
